Fixes spacing with sort menu

--- a/src/EditCardText.css
+++ b/src/EditCardText.css
@@ -101,4 +101,8 @@
         margin-right: 10%;
         width:80%;
     }
+
+    .header input{
+        width: 100%;
+    }
 }
